--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
 beautifulsoup4==4.5.1
 bs4==0.0.1
+enum-compat==0.0.2
+eventlet==0.20.0
+greenlet==0.4.11
+html5lib==0.999999999
+pyTelegramBotAPI==2.3.0
+requests==2.12.4
+sip==4.18.1
+six==1.10.0
+webencodings==0.5
